ifModifiedSince and cleanup

--- a/httpd.config
+++ b/httpd.config
@@ -10,3 +10,8 @@ CacheSize 8096
   DocumentRoot /home/httpd/html/zoo/classes/cs434/web/mobile-root
   ServerName mobile.cicada.cs.yale.edu
 </VirtualHost>  
+
+<VirtualHost *:6789>
+  DocumentRoot /Users/bradleylewis/Desktop/cpsc434-pset1/home
+  ServerName localhost
+</VirtualHost>
