created cache class

--- a/httpd.config
+++ b/httpd.config
@@ -15,3 +15,8 @@ CacheSize 8096
   DocumentRoot /Users/bradleylewis/Desktop/cpsc434-pset1/home
   ServerName localhost
 </VirtualHost>
+
+<VirtualHost *:6789>
+  DocumentRoot /Users/alexandershin/school/year3/networks/cpsc434-pset1/home
+  ServerName shin_localhost
+</VirtualHost>
